implement potrace and directly parse svg to pojos (omit path)